# DeepLearningSensorFusionForPedestrianDetection

./: README.md  steps_to_launch_the_radar_lidar_rgb_system.txt
L3CamSimulator/: CMakeLists.txt  dataTypes.h  main.cpp  udpSender.cpp  udpSender.h
data1/Lidar/: 20221017_131347_483.pcd  20221017_131347_632.pcd  20221017_131347_782.pcd  20221017_131347_932.pcd  20221017_131348_082.pcd  20221017_131348_232.pcd  20221017_131348_407.pcd  20221017_131348_557.pcd  20221017_131348_707.pcd  20221017_131348_857.pcd  20221017_131349_007.pcd  20221017_131349_157.pcd  20221017_131349_307.pcd  20221017_131349_457.pcd  20221017_131349_607.pcd  20221017_131349_757.pcd  20221017_131349_907.pcd  20221017_131350_057.pcd  20221017_131350_232.pcd  20221017_131350_382.pcd  20221017_131350_532.pcd  20221017_131350_682.pcd  20221017_131350_832.pcd  20221017_131350_982.pcd  20221017_131351_132.pcd  20221017_131351_307.pcd  20221017_131351_432.pcd  20221017_131351_607.pcd  20221017_131351_732.pcd  20221017_131351_907.pcd  20221017_131352_058.pcd  20221017_131352_207.pcd  20221017_131352_358.pcd  20221017_131352_517.pcd  20221017_131352_667.pcd  20221017_131352_817.pcd  20221017_131352_967.pcd  20221017_131353_117.pcd  20221017_131353_267.pcd  20221017_131353_417.pcd  (+523 more)
data1/Radar/: 20221017_131347_535.pcd  20221017_131347_585.pcd  20221017_131347_635.pcd  20221017_131347_685.pcd  20221017_131347_735.pcd  20221017_131347_810.pcd  20221017_131347_860.pcd  20221017_131347_910.pcd  20221017_131347_960.pcd  20221017_131348_010.pcd  20221017_131348_085.pcd  20221017_131348_135.pcd  20221017_131348_185.pcd  20221017_131348_235.pcd  20221017_131348_285.pcd  20221017_131348_360.pcd  20221017_131348_410.pcd  20221017_131348_460.pcd  20221017_131348_510.pcd  20221017_131348_560.pcd  20221017_131348_635.pcd  20221017_131348_685.pcd  20221017_131348_735.pcd  20221017_131348_785.pcd  20221017_131348_860.pcd  20221017_131348_910.pcd  20221017_131348_960.pcd  20221017_131349_010.pcd  20221017_131349_060.pcd  20221017_131349_135.pcd  20221017_131349_185.pcd  20221017_131349_235.pcd  20221017_131349_285.pcd  20221017_131349_335.pcd  20221017_131349_410.pcd  20221017_131349_460.pcd  20221017_131349_510.pcd  20221017_131349_560.pcd  20221017_131349_610.pcd  20221017_131349_685.pcd  (+1512 more)
dl_calibration/: dl_calibration.ipynb
dl_err_opt_lid_rad/: CMakeLists.txt  package.xml  radar_matrix.txt
dl_err_opt_lid_rad/include/: dl_err_opt_lid_rad.h  functions.h
dl_err_opt_lid_rad/lidar_radar_rgb_data/Lidar/: 000.pcd  001.pcd  002.pcd  003.pcd  004.pcd  005.pcd  006.pcd  008.pcd  645.pcd  667.pcd  669.pcd  678.pcd
dl_err_opt_lid_rad/src/: dl_err_opt_lid_rad.cpp  functions.cpp
dl_libl3cam/: package.xml
dl_libl3cam/include/: beamErrors.h  dl_libl3cam.h
dl_libl3cam/src/: dl_libl3cam.cpp
dl_lid_rad_cam_system/dl_libl3cam/: CMakeLists.txt
dl_lid_rad_cam_system/dl_libl3cam/include/: beamagine.h  libL3Cam.h
dl_lid_rad_cam_system/dl_libl3cam/launch/: dl_sensor_fusion.launch
dl_lid_rad_cam_system/dl_lidarpointcloud/: CMakeLists.txt  package.xml
dl_lid_rad_cam_system/dl_lidarpointcloud/include/: dl_lidarpointcloud.h
dl_lid_rad_cam_system/dl_lidarpointcloud/src/: dl_lidarpointcloud.cpp
dl_lid_rad_cam_system/dl_lidarrgb/: CMakeLists.txt  package.xml
dl_lid_rad_cam_system/dl_lidarrgb/include/: beamErrors.h  beamagine.h  dl_lidarrgb.h  libL3Cam.h
dl_lid_rad_cam_system/dl_lidarrgb/src/: dl_lidarrgb.cpp
dl_lid_rad_cam_system/dl_lrgb_ymdhmsz/dl_image_ymdhmsz/: CMakeLists.txt  package.xml
dl_lid_rad_cam_system/dl_lrgb_ymdhmsz/dl_image_ymdhmsz/include/: dl_image_ymdhmsz.h
dl_lid_rad_cam_system/dl_lrgb_ymdhmsz/dl_image_ymdhmsz/src/: dl_image_start_pause_client.cpp  dl_image_ymdhmsz.cpp
dl_lid_rad_cam_system/dl_lrgb_ymdhmsz/dl_image_ymdhmsz/srv/: imgprocess.srv
dl_lid_rad_cam_system/dl_lrgb_ymdhmsz/dl_lidar_ymdhmsz/: CMakeLists.txt  package.xml
dl_lid_rad_cam_system/dl_lrgb_ymdhmsz/dl_lidar_ymdhmsz/include/: dl_lidar_ymdhmsz.h
dl_lid_rad_cam_system/dl_lrgb_ymdhmsz/dl_lidar_ymdhmsz/launch/: dl_lrgb_sensors.launch  dl_rviz.launch  dl_start.launch
dl_lid_rad_cam_system/dl_lrgb_ymdhmsz/dl_lidar_ymdhmsz/rviz/: rviz.rviz
dl_lid_rad_cam_system/dl_lrgb_ymdhmsz/dl_lidar_ymdhmsz/src/: dl_lidar_start_pause_client.cpp  dl_lidar_ymdhmsz.cpp
dl_lid_rad_cam_system/dl_lrgb_ymdhmsz/dl_lidar_ymdhmsz/srv/: lidarprocess.srv
dl_lidar_centerpoint_depth/: CMakeLists.txt  package.xml
dl_lidar_centerpoint_depth/include/: dl_lidar_centerpoint_depth.h
dl_lidar_centerpoint_depth/src/: dl_lidar_centerpoint_depth.cpp
dl_lidar_rgb_radar_matches/: CMakeLists.txt  package.xml
dl_lidar_rgb_radar_matches/include/: dl_lidar_rgb_radar_matches.h
dl_lidar_rgb_radar_matches/src/: dl_lidar_rgb_radar_matches.cpp
dl_lidar_rgb_radar_sync/: CMakeLists.txt  package.xml
dl_lidar_rgb_radar_sync/include/: dl_lidar_rgb_radar_sync.h
dl_lidar_rgb_radar_sync/launch/: dl_sync_record_rosbag.launch  dl_sync_sensors.launch  sync_play_rosbag.launch  sync_rviz.launch  sync_sensors.launch
dl_lidar_rgb_radar_sync/src/: dl_lidar_rgb_radar_sync.cpp
dl_radar_initialization/: CMakeLists.txt  package.xml
dl_radar_initialization/launch/: dl_radar_initialization.launch
dl_radar_initialization/src/: dl_radar_initialization.cpp
dl_real_system_simulation/dl_ros_segnetpy/: CMakeLists.txt  package.xml
dl_sensor_fusion/: dl_SegNet.ipynb
dl_sensors2_8_16_gray/: CMakeLists.txt  package.xml
dl_sensors2_8_16_gray/include/: dl_sensors2_8_16_gray.h
dl_sensors2_8_16_gray/src/: dl_sensors2_8_16_gray.cpp
umrr_driver/: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  package.xml  setup.py
umrr_driver/can_spec/: Automotive_Can_Spec_TargetList_V5.json
umrr_driver/cfg/: pc2filter.cfg  umrr_driver_default_config.yaml
umrr_driver/launch/: automotive_radar_default.launch  automotive_radar_visualization.launch
umrr_driver/rviz/: all_sensors.rviz  default.rviz
umrr_driver/scripts/: pc2_filter.py  spherical2cartesian.py  spherical_coord_2_cartesian_coord.py  umrr_can_publisher.py
umrr_driver/srv/: sens_param.srv  sens_param_req.srv  sens_status.srv
(+79 files in other folders)
